fixbug: support markdown inside collapsed div tag

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,6 +10,7 @@ body {
   padding: 0;
 }
 
+html,
 body {
   font-family: $baskerville;
   font-size: 14px;
