--- a/_sass/_overwrite_bootstrap.scss
+++ b/_sass/_overwrite_bootstrap.scss
@@ -1,7 +1,4 @@
 
-.collapse {
-  padding-bottom: 15px;
-}
 .btn {
   cursor: pointer;
 }
